force-app/main/default/objects/Tax_Rate_Setting__mdt/Tax_Rate_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Tax Rate Setting</label>
    <pluralLabel>Tax Rate Settings</pluralLabel>
</CustomObject>