force-app/main/default/objects/Tax_Rate_Setting__mdt/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Social Security</fullName>
                <default>true</default>
                <label>Social Security</label>
            </value>
            <value>
                <fullName>Medicare Withholding</fullName>
            </value>
            <value>
                <fullName>Standard Deduction Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>